--- a/my-project-website/src/app/composants/header/header.component.html
+++ b/my-project-website/src/app/composants/header/header.component.html
@@ -1,7 +1,84 @@
-<div class="min-h-screen flex flex-col xl:flex-row">
+<div class="flex flex-col lg:flex-row min-h-screen relative">
+  <!-- Header de gauche -->
+  <div class="lg:flex hidden flex-col items-center justify-between w-16 bg-white shadow-lg rounded-xl min-h-screen">
+    <div>
+      <a #burgerBar href="/" class="flex flex-col items-center justify-center p-4">
+        <img src="/assets/img/burger-bar%20(1).png" alt="" class="w-4">
+        <span class="text-header mt-1 hidden">Menu</span>
+      </a>
 
-  <!-- Map -->
-  <div class="flex-1 flex justify-end">
-    <div class="h-[100vh] w-full xl:h-auto xl:w-[100%]" id="map"></div>
+      <a href="/" class="flex flex-col items-center justify-center p-4">
+        <img src="/assets/img/home.png" alt="" class="w-4">
+        <span id="text" class="text-header-2 mt-1 hidden">Accueil</span>
+      </a>
+
+      <a href="/" class="flex flex-col items-center justify-center p-4">
+        <img src="/assets/img/placeholder.png" alt="" class="w-4">
+        <span class="text-header-2 mt-1 hidden">Historique</span>
+      </a>
+
+      <a href="/" class="flex flex-col items-center justify-center p-4">
+        <img src="/assets/img/tab.png" alt="" class="w-6">
+        <span class="text-header-2 mt-1 hidden">Enregistrer</span>
+      </a>
+      <a href="/" class="flex flex-col items-center justify-center p-4">
+        <img src="/assets/img/notification.png" alt="" class="w-4">
+        <span class="text-header-2 mt-1 hidden">Notifications</span>
+      </a>
+    </div>
+    <a href="/" class="flex flex-col items-center justify-between p-4">
+      <img src="/assets/img/user.png" alt="" class="w-4">
+      <span class="text-header mt-1 hidden">Compte</span>
+    </a>
   </div>
+
+  <!-- Search bar -->
+  <div class="w-[70%] lg:w-[40%] mt-2 absolute top-0 left-1/2 transform -translate-x-1/2 z-10 bg-white shadow rounded-xl">
+    <form class=" mx-auto">
+      <label for="default-search" class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-white">Search</label>
+      <div class="relative">
+        <div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none">
+          <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
+          </svg>
+        </div>
+        <input type="search" id="default-search" class="block w-full p-2 sm:p-4 sm:ps-10 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Rechercher un lieu ou une condition météo..." required />
+        </div>
+    </form>
+  </div>
+
+  <div class="flex-grow -z-0" id="map"></div>
+  <!-- Div responsive en bas de l'écran sur téléphone !-->
+  <div class="h-5/6 z-10 flex justify-center items-center lg:hidden">
+    <!-- Conteneur de grille pour les boutons, affichés horizontalement -->
+    <div class="grid grid-cols-5 gap-6 sm:gap-20 mt-2 mb-1">
+      <a href="/" class="flex flex-col items-center justify-center ">
+        <img src="/assets/img/home.png" alt="" class="w-3">
+        <span class="text-header">Accueil</span>
+      </a>
+
+      <a href="/" class="flex flex-col items-center justify-center ">
+        <img src="/assets/img/placeholder.png" alt="" class="w-3">
+        <span class="text-header">Déplacements</span>
+      </a>
+
+      <a href="/" class="flex flex-col items-center justify-center ">
+        <img src="/assets/img/tab.png" alt="" class="w-6">
+      </a>
+
+      <a href="/" class="flex flex-col items-center justify-center ">
+        <img src="/assets/img/notification.png" alt="" class="w-3">
+        <span class="text-header">Notifications</span>
+      </a>
+
+      <a href="/" class="flex flex-col items-center justify-center ">
+        <img src="/assets/img/user.png" alt="" class="w-3">
+        <span class="text-header">Compte</span>
+      </a>
+    </div>
+  </div>
+
+
 </div>
+
+
