--- a/my-project-website/src/app/composants/header/header.component.html
+++ b/my-project-website/src/app/composants/header/header.component.html
@@ -14,7 +14,7 @@
           <span class="text-header-2 mt-1 hidden">Historique</span>
         </a>
 
-        <a  class=" flex flex-col items-center justify-center p-4">
+        <a (click)="SaveLocation()" class=" flex flex-col items-center justify-center p-4">
           <img src="/assets/img/tab.png" alt="" class="w-6">
           <span class="text-header-2 mt-1 hidden">Enregistrer</span>
         </a>
@@ -213,7 +213,7 @@
           <span >Notifications</span>
         </a>
 
-        <a href="/" class="flex flex-col items-center justify-center ">
+        <a (click)="signOut()" href="/" class="flex flex-col items-center justify-center ">
           <img src="/assets/img/user.png" alt="" class="w-4">
           <span class="" >Compte</span>
         </a>
