--- a/my-project-website/src/app/composants/login/login.component.html
+++ b/my-project-website/src/app/composants/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="absolute z-20 flex items-center justify-center w-full h-full bg-gray-900 bg-opacity-50 backdrop-filter backdrop-blur-sm">
   <div class="bg-white p-4 md:p-8 rounded-lg shadow-md relative w-11/12 md:w-auto">
     <a (click)="enterVisitorMode()" href="#">
-      <img src="./assets/img/close.png" alt="Close Popup Icon" class="absolute top-0 h-5 right-3 mt-4">
+      <img src="../../../assets/img/close.png" alt="Close Popup Icon" class="absolute top-0 h-5 right-3 mt-4">
     </a>
     <h2 class="text-xl md:text-2xl font-semibold text-center text-gray-800 mb-3 md:mb-4">Module de connexion</h2>
 
