--- a/my-project-website/src/app/composants/header/header.component.html
+++ b/my-project-website/src/app/composants/header/header.component.html
@@ -25,14 +25,22 @@
           <span class="text-header-2 mt-1 hidden">Notifications</span>
         </a>
       </div>
-      <a (click)="toggleAccountPanel()" class="flex flex-col items-center justify-between p-4">
-        <img src="/assets/img/user.png" alt="" class="w-5">
-        <span class="text-header mt-1 hidden">Compte</span>
-      </a>
+      <div>
+        <a (click)="toggleAccountPanel()" class="flex flex-col items-center justify-between p-4">
+          <img src="/assets/img/user.png" alt="" class="w-5">
+          <span class="text-header mt-1 hidden">Compte</span>
+        </a>
+
+        <a (click)="signOut()" class="flex flex-col items-center justify-between p-4">
+          <img src="/assets/img/exit.png" alt="" class="w-5">
+          <span class="text-header mt-1 hidden">Déconnexion</span>
+        </a>
+      </div>
+
     </div>
 
     <!-- Search bar -->
-    <div class="w-[50%] mt-2 absolute top-0 left-1/2 transform  -translate-x-1/2 z-10 bg-white shadow rounded-xl">
+    <div (keydown.enter)="this.searchPanelVisible = true" id="search" class="w-[50%] mt-2 absolute top-0 left-1/2 transform  -translate-x-1/2 z-10 bg-white shadow rounded-xl">
       <form class=" mx-auto">
         <label for="default-search" class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-white">Search</label>
         <div class="relative">
@@ -41,9 +49,27 @@
               <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
             </svg>
           </div>
-          <input type="search" id="default-search" class="block w-full p-2 sm:p-4 sm:ps-10 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Entrer une date ou un lieu" required />
+          <input type="search" id="default-search" class="block w-full p-2 sm:p-4 sm:ps-10 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Entrez un lieu pour obtenir la météo actuelle et les prévisions pour la journée" required />
         </div>
       </form>
+    </div>
+
+    <!-- Section RECHERCHE -->
+    <div id="searchPanel" [class.h-0]="!searchPanelVisible" [class.h-auto]="searchPanelVisible" class="w-[70%] md:w-[50%] mt-20 absolute top-0 left-1/2 transform -translate-x-1/2 z-10 bg-white shadow rounded-xl">
+      <!-- Contenu de l'historique -->
+      <img [class.hidden]="!searchPanelVisible" (click)="toggleSearchPanel()" class="absolute top-3 right-7 w-5" src="/assets/img/close.png" alt="">
+      <div class="text-xxs p-4 h-[300px] overflow-y-auto" [class.hidden]="!searchPanelVisible">
+        <h3 class="text-lg font-semibold mb-2">Météo</h3>
+        <p class="mb-5">Obtenez les informations météorologiques actuelles et les prévisions pour la journée pour le lieu que vous avez saisi.</p>
+        <ul>
+          <li class="m-5">
+            <div class="inline-block justify-center items-center text-center">
+              <strong><p>Cette fonctionnalité n'est pas encore disponible car elle nécessite un abonnement premium à l'API OpenWeatherMap.</p></strong>
+            </div>
+          </li>
+          <!-- Ajoutez d'autres éléments d'historique ici -->
+        </ul>
+      </div>
     </div>
 
 
@@ -97,27 +123,17 @@
          class="account-panel  w-[50%] mt-20 absolute top-0 left-1/2 transform -translate-x-1/2 z-10 bg-white shadow rounded-xl">
 
       <div class="account-details text-xxs p-4 h-[300px] overflow-y-auto flex flex-col sm:flex-row" [class.hidden]="!accountPanelVisible">
-        <div class="w-full sm:w-1/2">
+        <div class="w-full">
           <h3 class="account-action-title text-lg font-semibold mb-2">Informations du compte</h3>
           <div class="flex justify-center items-center ">
             <img src="{{ userAccount.picture }}" class="rounded-full mb-5" alt="Image du compte">
           </div>
           <div class="user-info text-center">
-            <p class="font-bold">Nom d'utilisateur:</p>
-            <p>{{ userAccount.name }}</p>
+            <p class="font-bold mb-2">Nom d'utilisateur:</p>
+            <p class="mb-2">{{ userAccount.name }}</p>
             <hr/>
-            <p class="font-bold mt-5">E-Mail:</p>
-            <p>{{ userAccount.email }}</p>
-          </div>
-        </div>
-        <div class="w-full lg:w-1/2">
-          <h3 class="account-action-title text-lg font-semibold mb-2 mt-5 sm:mt-0 ">Actions</h3>
-          <div class="account-action">
-            <a href="#" class="change-password block mt-4 p-2 lg:text-2xl underline">Activer le mode sombre</a>
-            <hr/>
-            <a href="#" class="view-log block mt-4 p-2 lg:text-2xl underline">Consulter le journal de compte</a>
-            <hr/>
-            <a (click)="signOut()" class="sign-out block mt-4 p-2 lg:text-2xl underline">Se déconnecter</a>
+            <p class="font-bold mt-5 mb-2">Email:</p>
+            <p class="mb-2">{{ userAccount.email }}</p>
           </div>
         </div>
       </div>
@@ -261,6 +277,11 @@
         // Basculement du panneau d'historique lors du clic sur le bouton Historique
         historyPanel.classList.toggle("h-0");
         historyPanel.classList.toggle("h-auto");
+      });
+
+
+      document.getElementById('search').addEventListener('click', function(event) {
+        console.log('Touche pressée :', event.key);
       });
     });
 
